[package]
name = "kuantum_network"
version = "0.1.0"
edition = "2021"
authors = ["Kuantum Network Team"]
description = "Anonim ve güvenli P2P iletişim altyapısı"
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/kullanıcıadı/kuantum-network"
keywords = ["anonim", "p2p", "network", "onion-routing", "crypto"]
categories = ["network-programming", "cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.39", features = ["tcp-tokio", "mdns", "floodsub", "noise", "yamux"] }
futures = "0.3"
async-std = { version = "1.10", features = ["attributes"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.9"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ring = "0.16"
prost = "0.9"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "0.8", features = ["v4"] }
hex = "0.4"

[profile.release]
opt-level = 3
debug = false
strip = true  # Removes debug symbols
lto = true    # Link-time optimization
codegen-units = 1
panic = "abort"  # Minimize binary size on panic

[profile.dev.package."*"]
opt-level = 3    # Optimize dependencies even in debug mode
